gl33-master/src/test/deca/context/valid/others/bonAppelFonctionsFloat.deca
//Test valid : appel des fonctions par les bons paramètres d'entrée (float) et par les bons valeurs de retour

class MyClass{
  float myFunc(float a){
    return a+1;
  }
}

{
  MyClass m = new MyClass();
  float b = m.myFunc(1.2);
}
